link to bootstrap in index

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="public/javascripts/app.js"></script>
-
+  <link rel="stylesheet" type="text/css" href="dist/css/bootstrap.min.css">
 </head>
 <body ng-app="TodoApp">
   <div ng-controller="TodosCtrl">
