--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" type="text/css" href="dist/css/bootstrap.min.css">
 </head>
 <body ng-app="TodoApp">
+  <div class="container">
   <div ng-controller="TodosCtrl">
     <form ng-submit="addTodo()">
       <div>
@@ -40,6 +41,7 @@
         </div>
       </div>
 
+    </div>
     </div>
   </div>
 </body>
