add angular-routes component, refactor views, root view added.

--- a/index.html
+++ b/index.html
@@ -9,39 +9,13 @@
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="public/javascripts/app.js"></script>
+  <script src="node_modules/angular-route/angular-route.js"></script>
   <link rel="stylesheet" type="text/css" href="dist/css/bootstrap.min.css">
 </head>
 <body ng-app="TodoApp">
-  <div class="container">
-  <div ng-controller="TodosCtrl">
-    <form ng-submit="addTodo()">
-      <div>
-        <textarea ng-model="newTodo.content"></textarea>
-      </div>
-      <div>
-        <button>Add Todo</button>
-      </div>
-    </form>
-    <div>
-
-      <div ng-repeat="todo in todos track by $index">
-        <div ng-hide="editing">
-          {{todo.content}}
-        </div>
-
-        <form ng-submit="update()" ng-show="editing">
-          <textarea ng-model="todo.content"></textarea>
-          <div>
-            <button>Update</button>
-          </div>
-        </form>
-
-        <div ng-hide="editing">
-          <button ng-click="delete()">Delete</button><button ng-click="edit()">Edit</button>
-        </div>
-      </div>
-
-    </div>
-    </div>
+  <ul>
+    <li></li>
+  </ul>
+  
   </div>
 </body>
