--- a/index.html
+++ b/index.html
@@ -13,14 +13,50 @@
    <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet"/>
 </head>
 <body ng-app="TodoApp">
-  <ul>
-    <li> <a href="#/">Reg Todos</a></li>
-    <li> <a href="#/cool_todos">Cool Ass Todos</a></li>
-  </ul>
+
+  <!-- Nav Bar BOOM -->
+  <nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Brand</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#/cool_todos">Cool Ass Todos</a>
+          <span class="sr-only">(current)</span></a></li>
+        <li><a href="#/">Reg Todos</a></li>
+        
+      </ul>
+      <form class="navbar-form navbar-left" role="search">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Link</a></li>
+
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
 
   <div class="container">
-    <ng-view></ng-view>
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <ng-view></ng-view>
+      </div>
+    <div class="panel-footer"></div>
   </div>
-  
-  </div>
+
 </body>
